# graphics-programming-2026

exercises/exercise00/: CMakeLists.txt
exercises/exercise02/: CMakeLists.txt
exercises/exercise03/: CMakeLists.txt
exercises/exercise04/: CMakeLists.txt
exercises/exercise05/: CMakeLists.txt
exercises/exercise07/: CMakeLists.txt  FirefliesApplication.cpp
exercises/exercise08/: CMakeLists.txt
exercises/exercise09/: CMakeLists.txt
exercises/exercise10/: CMakeLists.txt
exercises/other/: CMakeLists.txt
exercises/project/: CMakeLists.txt  RefractionApp.cpp  RefractionApp.h  main.cpp
exercises/project/shaders/: basic.frag  basic.vert  default.frag  default.vert  simple.frag  simple.vert
exercises/project/shaders/renderer/: skybox.vert
libraries/itugl/: CMakeLists.txt
libraries/itugl/src/ituGL/asset/: TextureCubemapLoader.cpp
